# Dynamic-Object-Remover

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/remover/: Remover.h  RosParam.h  patchworkpp.hpp  utility.h
launch/: remove.launch  remove_visualization.rviz
src/: Remover.cpp  RosParam.cpp  main.cpp  utility.cpp
